chore(CityJSON): fix sonnar issues